@@ -1,4 +1,5 @@
 Changes towards version 0.3:
+- Wav loader is now endian safe (bug #165) -Mika
 - Dialogue patch for Melnorme, fixing bug #335
 - Two dialogue spots where visit count could run away patched; fixes bug 
   #333, from Stas Sergeev
